# cs6457-milestone-packaging

./: LICENSE  Makefile  README.md  pyproject.toml
src/cs6457/: cli.py
src/cs6457/commands/: package.py
src/cs6457/resources/: package_default_exclusions.txt
